# image-to-pptx-ir

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  rule_proposal.yml
ci/: github-actions.yml
examples/: README.md  ai-operations-system.editable.pptx  ai-operations-system.manifest.json  ai-operations-system.render.json  ai-operations-system.semantic.json  cluster-communication.render.json  cluster-communication.semantic.json
schemas/: render.schema.json  semantic.schema.json
skills/image-to-pptx-ir/: README.md  SKILL.md
skills/image-to-pptx-ir/agents/: openai.yaml
skills/image-to-pptx-ir/checklists/: pptx_visual_validation.md
skills/image-to-pptx-ir/examples/: cluster_communication.render.example.json
skills/image-to-pptx-ir/prompts/: image_to_render_json_prompt.md  render_json_to_pptx_prompt.md
skills/image-to-pptx-ir/references/: complex-icon-assets.md  spec.md  visual-validation.md  workflow.md
skills/image-to-pptx-ir/templates/: render.schema.json  semantic.schema.json
src/pptx_ir/: __init__.py  cli.py  preview.py  validator.py
tests/: test_cli.py  test_example_artifacts.py  test_preview.py  test_validator.py
