[metadata]
name = image-to-pptx-ir
version = 0.1.0
description = A deterministic intermediate representation and validator for rebuilding editable PowerPoint slides from images.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
author = image-to-pptx-ir contributors
url = https://github.com/mapan0424/image-to-pptx-ir
project_urls =
    Source = https://github.com/mapan0424/image-to-pptx-ir
    Issues = https://github.com/mapan0424/image-to-pptx-ir/issues
keywords = powerpoint, pptx, presentation, computer-vision, json-schema, codex-skill
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics :: Presentation

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pptx_ir =
    py.typed
    assets/lucide/*.svg
    assets/lucide/LICENSE

[options.entry_points]
console_scripts =
    pptx-ir = pptx_ir.cli:main
